--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(PROJECTNAME gl3)
 PROJECT(${PROJECTNAME})
  
 set(main_SRCS
-      main.cpp
+      main.cpp unwind.cpp
    )
  
 SET(LIBRARIES ${LIBRARIES})
@@ -26,9 +26,12 @@ if ( LIBUNWIND_FOUND )
 	include_directories( ${LIBUNWIND_INCLUDE_DIRS} )
 endif(LIBUNWIND_FOUND)
 
+find_package(GLEW REQUIRED)
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
-SET(LIBRARIES ${LIBRARIES} ${OPENGL_LIBRARIES} ${PNG_LIBRARY} ${UNWIND_SHARED_LIB})
+SET(LIBRARIES ${LIBRARIES} ${OPENGL_LIBRARIES}
+	${PNG_LIBRARY} ${UNWIND_SHARED_LIB} ${GLEW_LIBRARY})
  
 INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} )
  
