fixes for CMake 3+

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,11 +37,14 @@ if ( LIBUNWIND_FOUND )
 endif(LIBUNWIND_FOUND)
 
 find_package(GLEW REQUIRED)
+find_package(X11 REQUIRED)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 SET(LIBRARIES ${LIBRARIES} ${OPENGL_LIBRARIES}
-	${PNG_LIBRARY} ${UNWIND_SHARED_LIB} ${GLEW_LIBRARY})
+	${PNG_LIBRARY} ${UNWIND_SHARED_LIB} ${GLEW_LIBRARY}
+	${X11_LIBRARIES}
+	)
  
 INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} )
  
