sprite com gambiarra

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(main_SRCS
 		include/imgui/imgui_draw.cpp
 		include/imgui/imgui.cpp
 		loader.cpp
+		eng_sprite.cpp
 		data_transform.cpp
 		util.cpp
 		cfg.cpp
