mid-commit backup2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -79,6 +79,6 @@ INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} )
 
 ADD_EXECUTABLE(${PROJECTNAME} ${main_SRCS})
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -g")
+set(CMAKE_CXX_FLAGS "-std=c++11 -g -pthread")
 
 TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
