--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
 
 SET(PROJECTNAME gl3)
-SET(CMAKE_C_COMPILER /usr/bin/clang)
-SET(CMAKE_CXX_COMPILER /usr/bin/clang++)
+SET(CMAKE_C_COMPILER /usr/bin/gcc)
+SET(CMAKE_CXX_COMPILER /usr/bin/g++)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../cmake")
 PROJECT(${PROJECTNAME})
 
@@ -79,6 +79,6 @@ INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} )
 
 ADD_EXECUTABLE(${PROJECTNAME} ${main_SRCS})
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -g -pthread")
+set(CMAKE_CXX_FLAGS "-std=c++11 -pg -pthread")
 
 TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES})
