Commented out old printfs debugging Commented out (temp) sprite path General refactoring of variable names General refactoring of include paths New vscode settings:  - Skipping STL  - Using beyond debugger Reusing old code:  - Adding my old editor in editor folder  - Adding old containers (OrderedMap) Start fixing semantics of asset/loader/engine

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,22 @@
     "version": "0.2.0",
     "configurations": [
       {
-        "type": "gdb",
+        "type": "by-gdb",
         "request": "launch",
-        "name": "Launch Program",
-        "target": "./bin/gl3",
-        "cwd": "${workspaceRoot}",
-        "preLaunchTask": "build",
-        "valuesFormatting": "parseText"
+        "name": "Launch(gdb)",
+        "program": "./bin/gl3",
+        "cwd": "${workspaceRoot}"
       },
+ 
+      // {
+      //   "type": "gdb",
+      //   "request": "launch",
+      //   "name": "Launch Program",
+      //   "target": "./bin/gl3",
+      //   "cwd": "${workspaceRoot}",
+      //   "preLaunchTask": "build",
+      //   "valuesFormatting": "parseText",
+      //   "miDebuggerArgs": ["-x .skip_stl"]
+      // },
     ]
 }
