--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=917,117
-Size=550,680
+Pos=-298,120
+Size=1086,1012
 Collapsed=0
 
 [Window][Another Window]
-Pos=60,60
+Pos=78,485
 Size=197,71
 Collapsed=0
 
@@ -21,5 +21,15 @@ Collapsed=0
 [Window][ImGui Metrics]
 Pos=60,60
 Size=402,251
+Collapsed=0
+
+[Window][Hello é, world!]
+Pos=252,109
+Size=481,543
+Collapsed=0
+
+[Window][Sprites]
+Pos=287,381
+Size=586,505
 Collapsed=0
 
